# workers

./: Cargo.toml  README.md  index.html
src/: main.rs  models.rs
src/daos/: impldepartamento.rs  implfornecedor.rs  implfuncionario.rs  implproduto.rs  mod.rs
src/handlers/: departamento_handler.rs  fornecedor_handler.rs  funcionario_handler.rs  mod.rs  produto_handler.rs
